@@ -1,6 +1,6 @@
 //////////////////////////////////////////////////////////////////////////
 //
-//  Copyright (c) 2010, Image Engine Design Inc. All rights reserved.
+//  Copyright (c) 2010-2013, Image Engine Design Inc. All rights reserved.
 //
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
@@ -238,6 +238,16 @@ IECore::DataPtr SXRenderer::command( const std::string &name, const IECore::Comp
 	return m_implementation->command( name, parameters );
 }
 
+void SXRenderer::editBegin( const std::string &editType, const IECore::CompoundDataMap &parameters )
+{
+	m_implementation->editBegin( editType, parameters );
+}
+
+void SXRenderer::editEnd()
+{
+	m_implementation->editEnd();
+}
+		
 IECore::CompoundDataPtr SXRenderer::shade( const IECore::CompoundData *points ) const
 {
 	return m_implementation->shade( points );
