@@ -1,6 +1,6 @@
 ##########################################################################
 #
-#  Copyright (c) 2007-2012, Image Engine Design Inc. All rights reserved.
+#  Copyright (c) 2007-2013, Image Engine Design Inc. All rights reserved.
 #
 #  Redistribution and use in source and binary forms, with or without
 #  modification, are permitted provided that the following conditions are
@@ -64,6 +64,7 @@ from StringArrayParameterTest import StringArrayParameterTest
 from CoshaderTest import CoshaderTest
 from GroupTest import GroupTest
 from DspyTest import DspyTest
+from RerenderingTest import RerenderingTest
 
 if hasattr( IECoreRI, "SXRenderer" ) :
 	from SXRendererTest import SXRendererTest
